--- a/instalador/archivos/configuracion/httpd-vhosts.conf
+++ b/instalador/archivos/configuracion/httpd-vhosts.conf
@@ -25,10 +25,10 @@ NameVirtualHost *:80
 # match a ServerName or ServerAlias in any <VirtualHost> block.
 #
 <VirtualHost *:80>
-    ServerAdmin webmaster@SCYCPVES
-    DocumentRoot "c:/Apache2/docs/SCYCPVES"
-    ServerName SCYCPVES
-    ServerAlias SCYCPVES
-    ErrorLog "logs/SCYCPVES-error.log"
-    CustomLog "logs/SCYCPVES-access.log" common
+    ServerAdmin webmaster@COMVICONPRO
+    DocumentRoot "c:/Apache2/docs/COMVICONPRO"
+    ServerName COMVICONPRO
+    ServerAlias COMVICONPRO
+    ErrorLog "logs/COMVICONPRO-error.log"
+    CustomLog "logs/COMVICONPRO-access.log" common
 </VirtualHost>
